Update Config File and CNAME

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
+title:       tkruml.github.io
 email:       your_email@example.com
 author:      John Otander
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 baseurl:     "/tkruml.github.io"
-url:         "http://tkruml.github.io"
+url:         "http://github-tkruml.github.io"
 
 # Google analytics
 google_analytics:
