--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ email:       your_email@example.com
 author:      John Otander
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 
-# I commented out these lines
-#baseurl:     "tkruml.github.io"
-#url:         "http://tkruml.github.io"
+# I commented out this line for now
+#baseurl:    "tkruml.github.io"
+url:         "//tkruml.github.io"
 
 # Google analytics
 google_analytics:
