--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Blog & Projects
+title:       Tristan Ruml : Blog & Projects
 email:       tristan.ruml@gmail.com
 author:      Tristan Ruml
 description: "Random observations and projects I've worked on."
