--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,16 @@ description: "Random observations and projects I've worked on."
 url:         "//tkruml.github.io"
 
 # Google analytics
-google_analytics:
+google_analytics:<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47107509-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 # Optional features
 animated:           true
