--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       Tristan Ruml | Portfolio
 email:       tristan.ruml@gmail.com
 author:      Tristan Ruml
-description: "My portfolio website."
+description: "My portfolio and blog website."
 
 # I commented out this line for now
 #baseurl:    "tkruml.github.io"
