--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ google_analytics: UA-47107509-1
 
 # Optional features
 animated:           true
-show_related_posts: true
-show_post_footers:  true
+show_related_posts: false
+show_post_footers:  false
 
 # Social icons
 show_social_icons: true
